# gan-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  SAR2EO_Production_Pipeline_Guide.md  init.sh  pyproject.toml
.claude/skills/: commit.md  eval-run.md  new-model.md  prep-data.md  smoke-test.md  train-run.md
.github/workflows/: ci.yml  mypy.yml  pre-commit.yml  pytest.yml  ruff.yml
configs/: config.yaml  config_pix2pix.yaml  config_pix2pixhd.yaml
configs/data/: celeba.yaml  sar_eo.yaml  sentinel.yaml
configs/model/: dcgan.yaml  pix2pix.yaml  pix2pix_original.yaml
configs/training/: default.yaml  pix2pix.yaml  pix2pix_original.yaml
docker/: Dockerfile  docker-compose.yml
docs/: gan-pipeline-guide.html
papers/: IMPORTANT.md  READING_ROADMAP.md
scripts/: download_vgg_weights.py  evaluate.py  generate.py  make_dummy_data.py  prepare_data.py  train.py  train_pix2pix.py  train_pix2pixhd.py
src/gan_pipeline/: __init__.py
src/gan_pipeline/data/: __init__.py  dataset.py  paired_dataset.py  sentinel_utils.py  transforms.py
src/gan_pipeline/evaluation/: __init__.py  metrics.py
src/gan_pipeline/inference/: __init__.py  generate.py
src/gan_pipeline/models/: __init__.py  base.py  coarse_to_fine.py  dcgan.py  losses.py  multiscale_disc.py  patchgan.py  resnet_gen.py  unet.py
src/gan_pipeline/training/: __init__.py  base_trainer.py  paired_trainer.py  pix2pix_trainer.py  pix2pixhd_trainer.py  (+1 more)
tests/: conftest.py  test_data.py  test_inference.py  test_models.py  test_pix2pix.py  test_sentinel_utils.py  test_training.py
(+3 files in other folders)
